whitespace on document fixed

--- a/public/src/SCSS/document.scss
+++ b/public/src/SCSS/document.scss
@@ -15,6 +15,9 @@
   }
 
   .text{
+    border: 2px solid rgb(242,242,242);
+    padding: 10px;
+    overflow-x: scroll;
     white-space: nowrap;
   }
 
